# mimic-explorer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml
docs/: mimic_schema_reference.md
pages/: 1_schema_overview.py  2_table_browser.py  clinical_insights.py  community_references.py  database_schema.py  dataset_at_a_glance.py  note_timeline.py  schema_overview.py  table_browser.py  table_relationships.py
src/mimic_explorer/: config.py  db.py  stats.py  timeline_queries.py
tests/: conftest.py  test_config.py  test_db.py  test_schema_reference.py  test_stats.py  test_timeline_queries.py
