[project]
name = "mimic-explorer"
version = "0.1.0"
description = "Streamlit database explorer for MIMIC-III and MIMIC-IV clinical datasets"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christian Garbin" }]
dependencies = [
    "duckdb",
    "pandas",
    "plotly",
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [{ include-group = "lint" }, { include-group = "test" }, "pre-commit"]
lint = ["ruff"]
test = ["pytest", "pytest-cov"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "PLR2004", # magic values allowed in tests
    "ANN",     # annotations optional in tests
    "S608",    # SQL injection false positives (DuckDB read_csv_auto on local files)
]
"pages/**/*.py" = [
    "ANN",     # annotations optional in Streamlit pages
    "ARG001",  # cache-key-only args in st.cache_data functions (intentional)
    "PD011",   # .values vs .to_numpy() -- either is fine in page-level data wrangling
    "PLR2004", # magic values common in visualization thresholds and data checks
    "T201",    # print allowed in pages (streamlit uses it)
    "S608",    # SQL injection false positives (DuckDB read_csv_auto on local files)
]
"app.py" = [
    "ANN",     # annotations optional in app entry point
]
"src/mimic_explorer/db.py" = [
    "S608",    # SQL injection false positives (DuckDB read_csv_auto on local files)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/mimic_explorer"]
